Updates from Overleaf

--- a/4º Período/Finanças II/Atividade.tex
+++ b/4º Período/Finanças II/Atividade.tex
@@ -14,6 +14,7 @@
 \usepackage[portuguese]{babel} % Adaptação para o português (nomes e hifenização
 \usepackage{hyperref} % Suporte a hiperlinks
 \usepackage{indentfirst} % Indentação do primeiro parágrafo das seções
+\setlength{\headheight}{14.49998pt}
 \sisetup{
   output-decimal-marker = {,},
   inter-unit-product = \ensuremath{{}\cdot{}},
@@ -75,7 +76,17 @@
 \fancyhf{}
 \rhead{\thepage}
 
-\section{\textbf{}}
+\section{\textbf{Fundamentação da escolha}}
+
+\section{\textbf{Avaliação do Fluxo de caixa }}
+
+\section{\textbf{Avaliação da Estrutura de Capital da firma nos últimos 4 anos.}}
+
+\section{\textbf{Estimação do Custo de Capital da Empresa Avaliada}}
+
+\section{\textbf{Projeção para Fluxo de Caixa}}
+
+\section{\textbf{Roteiro do Vídeo}}
 
 
 \end{document}
