--- a/4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 6.1 .tex
+++ b/4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 6.1 .tex
@@ -6,7 +6,7 @@
 \usepackage{newtxtext} % Substitui a fonte padrão pela Times Roman
 \usepackage{ragged2e} % Justificação de texto melhorada
 \usepackage{setspace} % Controle do espaçamento entre linhas
-\usepackage[a4paper, left=3.0cm, top=3.0cm, bottom=2.0cm, rigH=2.0cm]{geometry} % Personalização das margens do documento
+\usepackage[a4paper, left=3.0cm, top=3.0cm, bottom=2.0cm, right=2.0cm]{geometry} % Personalização das margens do documento
 \usepackage{lipsum} % Geração de texto dummy 'Lorem Ipsum'
 \usepackage{fancyhdr} % Customização de cabeçalhos e rodapés
 \usepackage{titlesec} % Personalização dos títulos de seções
@@ -37,6 +37,7 @@
 \def\@pdfborderstyle{/S/U/W 1} % Estilo da borda dos links
 \makeatother
 \onehalfspacing
+\setlength{\headheight}{14.49998pt}
 
 \begin{document}
 
