--- a/4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/Tradução Tópico 7.2 .tex
+++ b/4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/Tradução Tópico 7.2 .tex
@@ -6,7 +6,7 @@
 \usepackage{newtxtext} % Substitui a fonte padrão pela Times Roman
 \usepackage{ragged2e} % Justificação de texto melhorada
 \usepackage{setspace} % Controle do espaçamento entre linhas
-\usepackage[a4paper, left=3.0cm, top=3.0cm, bottom=2.0cm, rigH=2.0cm]{geometry} % Personalização das margens do documento
+\usepackage[a4paper, left=3.0cm, top=3.0cm, bottom=2.0cm, right=2.0cm]{geometry} % Personalização das margens do documento
 \usepackage{lipsum} % Geração de texto dummy 'Lorem Ipsum'
 \usepackage{fancyhdr} % Customização de cabeçalhos e rodapés
 \usepackage{titlesec} % Personalização dos títulos de seções
@@ -130,7 +130,7 @@ O uso da categoria teoria-empírica ilustra um ponto metodológico adicional: os
 As principais tendências, com base na amostra de todas as três revistas, são mostradas na figura 1. Houve um declínio progressivo na proporção de artigos empíricos ateóricos (incluindo história econômica), de mais de 50 por cento em 1920 para menos de 30 por cento em 1960. Houve um aumento correspondente na proporção de artigos que são teóricos ou empregam teoria formal, de cerca de 15 por cento em 1920 para cerca de 45 por cento em 1960. 
  \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 1.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/ figure 1.png}
     \end{figure}
 
 
@@ -138,7 +138,7 @@ A teoria formal se tornou, como se esperava, mais importante. Igualmente importa
 
  \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 2.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 2.png}
     \end{figure}
 
 O Uso da Matemática
@@ -147,7 +147,7 @@ Um aspecto importante desse processo foi o aumento do uso da matemática na econ
 
  \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 3.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 3.png}
     \end{figure}
 
 Técnicas Empíricas
@@ -158,17 +158,17 @@ Um indicativo de que essa amostra pode subestimar a aparência da econometria, c
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{table 1.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/table 1.png}
     \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 4.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 4.png}
     \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 5.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 5.png}
     \end{figure}
 
 \subsubsection{\textbf{Autores de Artigos de Revistas}}
@@ -182,7 +182,7 @@ Embora praticamente todos os contribuidores fossem baseados em instituições do
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 6.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 6.png}
     \end{figure}
 
 Idade
@@ -191,12 +191,12 @@ Foi argumentado, notavelmente por Samuelson, que a transformação da economia q
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 7.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 7.png}
     \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figure 8.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/figure 8.png}
     \end{figure}
 
 De muito mais interesse é o padrão de idade dos autores de artigos que usam álgebra. Não há evidências de que os economistas matemáticos na década de 1920 e na primeira metade da década de 1930 eram mais jovens do que a média (embora deva ser lembrado que a amostra é pequena), mas durante meados a final da década de 1930 surgiu uma grande lacuna: em 1940 - 44 os economistas matemáticos tinham em média trinta e dois anos, sete anos mais jovens do que os autores de artigos que não usavam álgebra. Durante o final da década de 1940, essa lacuna fechou acentuadamente, com a idade média dos economistas matemáticos subindo para trinta e oito. A partir de 1950, a lacuna se estabilizou em cerca de cinco anos. Isso é consistente com a teoria de que a economia matemática foi introduzida por uma nova geração que entrou na profissão no final da década de 1930. O aumento na idade dos economistas matemáticos no final da década de 1940 apoia essa teoria, pois nesse período os entrantes na profissão normalmente teriam sido mais velhos, tendo passado vários anos nas forças armadas. O aumento na idade média dos usuários de álgebra na década de 1950 em comparação com a idade média no final da década de 1930 e início da década de 1940 pode ser explicado pelas crescentes demandas técnicas do assunto e pelo fato de que essas técnicas estavam se tornando muito mais amplamente aceitas.
@@ -214,12 +214,12 @@ Embora o sistema fosse altamente concentrado, houve mudanças notáveis nas inst
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{table 2.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/table 2.png}
     \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{table 3.png}
+    \includegraphics[width=0.75\textwidth]{4º Período/História do Pensamento Econômico/Tradução HPE/Tradução Tópico 7.2/table 3.png}
     \end{figure}
 
 \subsubsection{\textbf{Conclusão}}
