--- a/4º Período/Microeconomia III/Resolução Lista 5.tex
+++ b/4º Período/Microeconomia III/Resolução Lista 5.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,12pt]{article}[abntex2]
 \bibliographystyle{abntex2-alf}
+\usepackage{amsmath} 
+\usepackage{tikz}
 \usepackage{siunitx} % Fornece suporte para a tipografia de unidades do Sistema Internacional e formatação de números
 \usepackage{booktabs} % Melhora a qualidade das tabelas
 \usepackage{tabularx} % Permite tabelas com larguras de colunas ajustáveis
@@ -9,6 +11,7 @@
 \usepackage{setspace} % Controle do espaçamento entre linhas
 \usepackage[a4paper, left=3.0cm, top=3.0cm, bottom=2.0cm, right=2.0cm]{geometry} % Personalização das margens do documento
 \usepackage{lipsum} % Geração de texto dummy 'Lorem Ipsum'
+\usepackage{multirow}
 \usepackage{fancyhdr} % Customização de cabeçalhos e rodapés
 \usepackage{titlesec} % Personalização dos títulos de seções
 \usepackage[portuguese]{babel} % Adaptação para o português (nomes e hifenização
@@ -44,22 +47,23 @@
     \centering
     \vspace*{1cm}
     \Large\textbf{INSPER – INSTITUTO DE ENSINO E PESQUISA}\\
-    \Large \textbf{ECONOMIA}\\
+    \Large ECONOMIA\\
     \vspace{1.5cm}
-    \Large\textbf{Atividade Prática Superviosionada III}\\
-    \textbf{Macroeconomia Internacional}\\
+    \Large\textbf{Lista 5}\\
+    \textbf{Microeconomia}\\
     \vspace{1.5cm}
-    Prof. Gino Olivares\\
-    Prof. Auxiliar Victor Dias \\
+    Prof(a). Laura Karpuska \\
+    Prof(a). Auxiliar  Pamela E. C. Borges
     \vfill
     \normalsize
-    Fabrizio Antonini Ripoli, \href{mailto:fabrizioar@al.insper.edu.br}{fabrizioar@al.insper.edu.br}\\
     Hicham Munir Tayfour, \href{mailto:hichamt@al.insper.edu.br}{hichamt@al.insper.edu.br}\\
     4º Período - Economia B\\
     \vfill
     São Paulo\\
-    Abril/2024
+    Maio/2024
 \end{titlepage}
+
+\newpage
 
 \newpage
 \tableofcontents
@@ -73,16 +77,32 @@
 \fancyhf{}
 \rhead{\thepage}
 
-\section{\textbf{Questão}}
-olha só olha lá \cite{fme11}, olha que legal.
-\cite{fme4}
 
-\cite{fme2}
 
-\cite{Taylor&Taylor}
-\ref{Taylor&Taylor}
+\section{\textbf{Questão 1}}
+\subsection{\textbf{Letra A}}
+\begin{tikzpicture}
+  \node (0) at (0,0) {1 escolhe S ou R};
+  \node (1) at (-3,-2) {$(3,3)$};
+  \node (2) at (3,-2) {Jogo continua};
+  \node (3) at (0,-4) {1: C ou D};
+  \node (4) at (-3,-6) {2: A ou B};
+  \node (5) at (-4,-8) {$(8,0)$};
+  \node (6) at (-2,-8) {$(0,2)$};
+  \node (7) at (2,-8) {$(6,6)$};
+  \node (8) at (4,-8) {$(2,2)$};
 
-\cite{ARV1_ELL}
-\bibliography{Bibliografia/bibmath}
+  \draw (0) -- node[above left] {S} (1);
+  \draw (0) -- node[above right] {R} (2);
+  \draw (2) -- (3);
+  \draw (3) -- node[above left] {C} (4);
+  \draw (3) -- node[above right] {D} (4);
+  \draw (4) -- node[left] {A} (5);
+  \draw (4) -- node[right] {B} (6);
+  \draw (4) -- node[left] {A} (7);
+  \draw (4) -- node[right] {B} (8);
+\end{tikzpicture}
+\end{document}
+
 
 \end{document}
