Updates from Overleaf

--- a/PIBIC/Estudos sobre Mastering Metrics.tex
+++ b/PIBIC/Estudos sobre Mastering Metrics.tex
@@ -547,7 +547,7 @@ Estudos com gêmeos oferecem uma maneira de controlar o viés de habilidade, ass
 
 Orley Ashenfelter e Alan Krueger utilizaram dados de gêmeos idênticos para estimar os retornos da escolaridade. Eles descobriram que os retornos eram aproximadamente 12\%, mesmo quando controlavam por habilidades não observadas compartilhadas entre gêmeos  .
 
-\subsection{Econometricians Are Known by Their … Instruments}
+\subsection{Econometricians Are Known by Their Instruments}
 
 \subsubsection*{It’s the Law}
 
