Updates from Overleaf

--- a/PIBIC/Estudos sobre Mastering Metrics.tex
+++ b/PIBIC/Estudos sobre Mastering Metrics.tex
@@ -76,13 +76,36 @@
 
 \subsection*{Our Path}
 
-O capítulo inicia descrevendo a importância dos ensaios randomizados como ferramenta central na análise econométrica. Os autores destacam que, apesar de os experimentos sociais randomizados serem caros e demorados, eles fornecem uma linha de base crucial para julgar os resultados de outros métodos. Experimentos randomizados são frequentemente vistos como o padrão-ouro para inferência causal porque, em média, garantem que os grupos de tratamento e controle sejam semelhantes em todos os aspectos, exceto na intervenção recebida.
+\subsection*{Estrutura para Questões Causais}
+A atribuição aleatória experimental é apresentada como uma base essencial para explorar questões causais. Serve como um referencial para avaliar os resultados de outros métodos.
+
+\subsection*{Ilustração da Alocação Aleatória}
+A exemplificação do poder da alocação aleatória é feita através de duas avaliações dos efeitos do seguro de saúde. Essas avaliações demonstram os benefícios e a clareza proporcionados pela atribuição aleatória em experimentos.
+
+\subsection*{Apêndice do Capítulo}
+O apêndice do capítulo revisa os conceitos e métodos de inferência estatística utilizando a estrutura experimental. Ele oferece uma base sólida para entender e aplicar a inferência estatística no contexto de experimentos aleatórios.
+
+\subsection*{Pontos Principais}
+\begin{itemize}
+    \item \textbf{Atribuição Aleatória Experimental:} Fundamental para questões causais.
+    \item \textbf{Referencial:} Base para julgar outros métodos.
+    \item \textbf{Efeitos do Seguro de Saúde:} Exemplos concretos mostrando o poder da alocação aleatória.
+    \item \textbf{Inferência Estatística:} Revisão no apêndice, conectada à estrutura experimental.
+\end{itemize}
+
 
 \subsection{Em Doença e em Saúde (Seguro)}
 
-\subsubsection*{O Affordable Care Act (ACA)}
+O \textit{Affordable Care Act} (ACA) é uma inovação política controversa que exige que os americanos comprem seguro de saúde, impondo uma penalidade fiscal para aqueles que não o fazem voluntariamente. A questão do papel do governo no mercado de saúde é complexa e inclui o efeito causal dos planos de saúde sobre a saúde. Embora os Estados Unidos gastem uma grande parte de seu PIB em saúde, os americanos são menos saudáveis do que outras nações desenvolvidas, com maior probabilidade de estar acima do peso e morrer mais cedo do que, por exemplo, os canadenses.
 
-O \textit{Affordable Care Act} (ACA) é uma política controversa que exige que os americanos comprem seguro de saúde, impondo uma multa fiscal para aqueles que não aderirem. O objetivo é melhorar a saúde pública, considerando que os EUA gastam uma porcentagem significativa do PIB em saúde, mas apresentam indicadores de saúde inferiores aos de outras nações desenvolvidas.
+Nos Estados Unidos, os idosos são cobertos pelo Medicare e alguns pobres pelo Medicaid. No entanto, muitos pobres em idade avançada e outros americanos sem seguro optam por não participar de planos de seguro fornecidos pelo empregador, recorrendo aos prontos-socorros para suas necessidades de saúde. Esses serviços, entretanto, não são ideais para tratamentos de longo prazo ou gerenciamento de condições crônicas, como diabetes e hipertensão. Portanto, o seguro de saúde exigido pelo governo pode trazer benefícios à saúde, justificando a pressão por um seguro universal subsidiado.
+
+A questão \textit{ceteris paribus} neste contexto contrasta a saúde de alguém com seguro e sem seguro, ressaltando que não podemos observar as pessoas em ambas as condições ao mesmo tempo. No poema "The Road Not Taken", Robert Frost usa a metáfora de uma encruzilhada para descrever os efeitos das escolhas pessoais, destacando que não podemos saber o resultado do caminho não percorrido.
+
+Evidências podem ser coletadas para investigar essas questões. O \textit{National Health Interview Survey} (NHIS) fornece dados detalhados sobre saúde e seguro de saúde nos EUA. Utilizando uma amostra de respondentes casados do NHIS de 2009, foi criado um índice de saúde que varia de 1 (saúde ruim) a 5 (saúde excelente). A relação causal de interesse é determinada pela cobertura de planos de saúde privados, com aqueles segurados sendo o grupo de tratamento e os não segurados o grupo de controle.
+
+A análise mostra que aqueles com plano de saúde são mais saudáveis do que aqueles sem, com diferenças significativas no índice de saúde. Essas diferenças podem indicar os benefícios de saúde proporcionados pelo seguro de saúde.
+
 
 \subsubsection*{Comparações Infrutíferas e Frutíferas}
 
